按自己需求对脚本进行改造
1. 非RDS环境，可使用dba用户杀线程，不需要配置多个用户名和密码
2. 增加配置项活动线程数量，超过阈值才杀
3. 邮件发送格式改善

--- a/mysqk.ini
+++ b/mysqk.ini
@@ -30,10 +30,10 @@ k_user=all
 k_longtime=10
 k_lock=1
 k_sleep=0
-
+; running threads threshold
+k_running=20 
 k_exclude=Binlog|ecdba|Daemon
 k_include=select sleep\(17\)
-
 
 [id_crm0]
 ; k_user: who's threads to be killed. use comma to separate
